// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`UI: ExtendedTextInput should match snapshot 1`] = `
<View>
  <Text
    style={
      Array [
        Object {
          "fontFamily": "Poppins-Regular",
          "fontSize": 17,
          "letterSpacing": 0.37,
          "lineHeight": 22,
        },
        Array [
          Object {},
          Object {
            "color": "red",
            "marginBottom": 10,
          },
        ],
      ]
    }
  >
    test input
  </Text>
  <TextInput
    onChangeText={[Function]}
    selectionColor="#FFB452"
    style={
      Array [
        Object {
          "backgroundColor": "#220A40E6",
          "borderColor": "#FFB452",
          "borderRadius": 24,
          "borderWidth": 1,
          "color": "#FFFFFF",
          "paddingHorizontal": 24,
          "paddingVertical": 16,
        },
        Object {
          "backgroundColor": "yellow",
        },
      ]
    }
    value="test input"
  />
  <Text
    style={
      Array [
        Object {
          "fontFamily": "Poppins-Regular",
          "fontSize": 17,
          "letterSpacing": 0.37,
          "lineHeight": 22,
        },
        Array [
          Object {},
          Object {
            "color": "red",
            "marginTop": 10,
          },
        ],
      ]
    }
  >
    smth broken
  </Text>
</View>
`;

exports[`UI: ExtendedTextInput should match snapshot 2`] = `
<View>
  <Text
    style={
      Array [
        Object {
          "fontFamily": "Poppins-Regular",
          "fontSize": 17,
          "letterSpacing": 0.37,
          "lineHeight": 22,
        },
        Array [
          Object {},
          Object {
            "color": "red",
            "marginBottom": 10,
          },
        ],
      ]
    }
  >
    password toggle test input
  </Text>
  <View
    style={
      Array [
        Object {
          "alignItems": "center",
          "flexDirection": "row",
        },
        Array [
          Object {
            "backgroundColor": "#220A40E6",
            "borderColor": "#FFB452",
            "borderRadius": 24,
            "borderWidth": 1,
            "color": "#FFFFFF",
            "paddingHorizontal": 24,
            "paddingVertical": 16,
          },
          Object {
            "backgroundColor": "yellow",
          },
        ],
      ]
    }
  >
    <TextInput
      onChangeText={[Function]}
      secureTextEntry={true}
      selectionColor="#FFB452"
      style={
        Object {
          "color": "#FFFFFF",
          "flex": 1,
          "padding": 0,
        }
      }
      value="test input"
    />
    <View
      accessible={true}
      collapsable={false}
      focusable={true}
      nativeID="animatedComponent"
      onClick={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        Object {
          "maxHeight": 17,
          "opacity": 1,
          "paddingLeft": 24,
        }
      }
    >
      <Image
        source={
          Object {
            "testUri": "../../../app/assets/images/openedEye.png",
          }
        }
      />
    </View>
  </View>
  <Text
    style={
      Array [
        Object {
          "fontFamily": "Poppins-Regular",
          "fontSize": 17,
          "letterSpacing": 0.37,
          "lineHeight": 22,
        },
        Array [
          Object {},
          Object {
            "color": "red",
            "marginTop": 10,
          },
        ],
      ]
    }
  >
    smth broken
  </Text>
</View>
`;
